# ib-positions

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ib_positions/: client.py  main.py  models.py
src/ib_positions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py
