[project]
name = "ib-positions"
version = "0.1.0"
description = "Async IB portfolio and historical price fetcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ib-async>=2.1.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=24.10.0",
    "flake8>=6.1.0",
    "isort>=6.14.0",
]

[build-system]
requires = ["setuptools>=65.0.0","wheel"]
build-backend = "setuptools.build_meta"